packages/yew-macro/tests/derive_props/fail.stderr
error: unexpected end of input, expected expression
  --> tests/derive_props/fail.rs:44:19
   |
44 |         #[prop_or()]
   |                   ^

error: cannot find attribute `props` in this scope
  --> tests/derive_props/fail.rs:22:11
   |
22 |         #[props(default)]
   |           ^^^^^

error[E0425]: cannot find value `foo` in this scope
  --> tests/derive_props/fail.rs:74:24
   |
74 |         #[prop_or_else(foo)]
   |                        ^^^ not found in this scope
   |
help: consider importing one of these items
   |
70 |     use crate::t10::foo;
   |
70 |     use crate::t9::foo;
   |

error[E0277]: the trait bound `AssertAllProps: HasProp<t3::_Props::value, _>` is not satisfied
  --> tests/derive_props/fail.rs:35:24
   |
35 |         ::yew::props!{ Props { } };
   |                        ^^^^^ the trait `HasProp<t3::_Props::value, _>` is not implemented for `AssertAllProps`
   |
note: required because of the requirements on the impl of `HasAllProps<t3::Props, (_,)>` for `t3::CheckPropsAll<AssertAllProps>`
  --> tests/derive_props/fail.rs:29:21
   |
29 |     #[derive(Clone, Properties, PartialEq)]
   |                     ^^^^^^^^^^
   = note: required because of the requirements on the impl of `AllPropsFrom<AssertAllProps, t3::PropsBuilder, (_,)>` for `AssertAllProps`
   = note: this error originates in the derive macro `Properties` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Value: Default` is not satisfied
    --> tests/derive_props/fail.rs:9:21
     |
9    |     #[derive(Clone, Properties, PartialEq)]
     |                     ^^^^^^^^^^ the trait `Default` is not implemented for `Value`
     |
note: required by `Option::<T>::unwrap_or_default`
     = note: this error originates in the derive macro `Properties` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0369]: binary operation `==` cannot be applied to type `Value`
  --> tests/derive_props/fail.rs:13:9
   |
9  |     #[derive(Clone, Properties, PartialEq)]
   |                                 --------- in this derive macro expansion
...
13 |         value: Value,
   |         ^^^^^^^^^^^^
   |
   = note: an implementation of `std::cmp::PartialEq` might be missing for `Value`
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0369]: binary operation `!=` cannot be applied to type `Value`
  --> tests/derive_props/fail.rs:13:9
   |
9  |     #[derive(Clone, Properties, PartialEq)]
   |                                 --------- in this derive macro expansion
...
13 |         value: Value,
   |         ^^^^^^^^^^^^
   |
   = note: an implementation of `std::cmp::PartialEq` might be missing for `Value`
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/derive_props/fail.rs:54:19
   |
54 |         #[prop_or(123)]
   |                   ^^^ expected struct `String`, found integer
   |
help: try using a conversion method
   |
54 |         #[prop_or(123.to_string())]
   |                      ++++++++++++
54 |         #[prop_or(123.to_string())]
   |                      ++++++++++++

error[E0277]: expected a `FnOnce<()>` closure, found `{integer}`
   --> tests/derive_props/fail.rs:64:24
    |
64  |         #[prop_or_else(123)]
    |                        ^^^ expected an `FnOnce<()>` closure, found `{integer}`
    |
    = help: the trait `FnOnce<()>` is not implemented for `{integer}`
    = note: wrap the `{integer}` in a closure with no arguments: `|| { /* code */ }`
note: required by a bound in `Option::<T>::unwrap_or_else`

error[E0593]: function is expected to take 0 arguments, but it takes 1 argument
   --> tests/derive_props/fail.rs:84:24
    |
84  |         #[prop_or_else(foo)]
    |                        ^^^ expected function that takes 0 arguments
...
88  |     fn foo(bar: i32) -> String {
    |     -------------------------- takes 1 argument
    |
note: required by a bound in `Option::<T>::unwrap_or_else`

error[E0271]: type mismatch resolving `<fn() -> i32 {t10::foo} as FnOnce<()>>::Output == String`
   --> tests/derive_props/fail.rs:98:24
    |
98  |         #[prop_or_else(foo)]
    |                        ^^^ expected struct `String`, found `i32`
    |
note: required by `Option::<T>::unwrap_or_else`
